test/Fail/Issue623A.agda
open import Issue623.A
